[gd_scene load_steps=6 format=3 uid="uid://d26xg6dvehwx2"]

[ext_resource type="Script" path="res://folder/folder_inventory.gd" id="1_pwu5y"]
[ext_resource type="Texture2D" uid="uid://dtb01en0forhv" path="res://art/playerfolder/closebutton.png" id="2_6posn"]
[ext_resource type="Texture2D" uid="uid://dh605sv4oc4gh" path="res://art/playerfolder/inventory/folder.png" id="3_b3nq6"]
[ext_resource type="PackedScene" uid="uid://55hrfbgbqdsg" path="res://folder/slot.tscn" id="3_sbfi1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1exvd"]
size = Vector2(604, 64)

[node name="folder_inventory" type="Control"]
z_index = 1
custom_minimum_size = Vector2(719, 410)
layout_mode = 3
anchors_preset = 0
offset_right = 719.0
offset_bottom = 410.0
script = ExtResource("1_pwu5y")

[node name="esc_button" type="TextureButton" parent="."]
z_index = 10
layout_mode = 0
offset_left = 607.0
offset_top = -12.0
offset_right = 805.0
offset_bottom = 162.0
scale = Vector2(0.5, 0.5)
texture_hover = ExtResource("2_6posn")
ignore_texture_size = true

[node name="tab" type="Area2D" parent="."]
z_index = 8

[node name="Sprite2D" type="Sprite2D" parent="tab"]
z_index = 1
position = Vector2(361, 196)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_b3nq6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="tab"]
position = Vector2(303, 33)
shape = SubResource("RectangleShape2D_1exvd")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 715.0
offset_bottom = 408.0
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -294.5
offset_top = -106.0
offset_right = 37.5
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.89709, 1.89709)
columns = 4

[node name="Panel" parent="NinePatchRect/GridContainer" instance=ExtResource("3_sbfi1")]
layout_mode = 2

[node name="Panel2" parent="NinePatchRect/GridContainer" instance=ExtResource("3_sbfi1")]
layout_mode = 2

[node name="Panel3" parent="NinePatchRect/GridContainer" instance=ExtResource("3_sbfi1")]
layout_mode = 2

[node name="Panel4" parent="NinePatchRect/GridContainer" instance=ExtResource("3_sbfi1")]
layout_mode = 2

[node name="Panel5" parent="NinePatchRect/GridContainer" instance=ExtResource("3_sbfi1")]
layout_mode = 2

[node name="Panel6" parent="NinePatchRect/GridContainer" instance=ExtResource("3_sbfi1")]
layout_mode = 2

[node name="Panel7" parent="NinePatchRect/GridContainer" instance=ExtResource("3_sbfi1")]
layout_mode = 2

[node name="Panel8" parent="NinePatchRect/GridContainer" instance=ExtResource("3_sbfi1")]
layout_mode = 2

[node name="Panel9" parent="NinePatchRect/GridContainer" instance=ExtResource("3_sbfi1")]
layout_mode = 2

[node name="Panel10" parent="NinePatchRect/GridContainer" instance=ExtResource("3_sbfi1")]
layout_mode = 2

[node name="Panel11" parent="NinePatchRect/GridContainer" instance=ExtResource("3_sbfi1")]
layout_mode = 2

[node name="Panel12" parent="NinePatchRect/GridContainer" instance=ExtResource("3_sbfi1")]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="esc_button" to="." method="_on_esc_button_mouse_entered"]
[connection signal="mouse_exited" from="esc_button" to="." method="_on_esc_button_mouse_exited"]
[connection signal="mouse_entered" from="tab" to="." method="_on_tab_mouse_entered"]
[connection signal="mouse_exited" from="tab" to="." method="_on_tab_mouse_exited"]
